--- a/style.css
+++ b/style.css
@@ -77,6 +77,9 @@ svg {
 .tileStackDisplay {
   grid-area: tile-stack;
   background: #bbb;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .scoreDisplayContainer {
   grid-area: score-box;
