--- a/style.css
+++ b/style.css
@@ -39,6 +39,15 @@ svg {
 }
 
 
+.version {
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  color: #aaa;
+  font-size: 12px;
+}
+
+
 .gridDisplay.animated {
   transition-property: all;
   transition-duration: 400ms;
@@ -52,6 +61,7 @@ svg {
   height: 100%;
   width: 100%;
   box-shadow: inset 0 0 40px rgb(0 0 0 / 20%);
+  background: #ddd;
   display: grid;
 
   grid-template-columns: 1fr 150px;
