--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 /*
 @font-face {
   font-family: 'Source Sans 3';
@@ -12,35 +10,37 @@
 */
 
 @font-face {
-  font-family: 'Barlow';
+  font-family: "Barlow";
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url(fonts/barlow-latin-400.woff) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+  src: url(fonts/barlow-latin-400.woff) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
+    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
+    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-
 
 body {
   background: #ddd;
   margin: 0;
   padding: 0;
-  font-family: 'Barlow', sans-serif;
+  font-family: "Barlow", sans-serif;
   -webkit-user-select: none;
   user-select: none;
   touch-action: none;
 }
-div, p, input, span {
+div,
+p,
+input,
+span {
   -webkit-user-select: none;
   user-select: none;
   touch-action: none;
 }
-
 
 svg {
   display: block;
 }
-
 
 .version {
   position: absolute;
@@ -49,7 +49,6 @@ svg {
   color: #aaa;
   font-size: 12px;
 }
-
 
 .gridDisplay.animated {
   transition-property: all;
@@ -165,8 +164,6 @@ svg {
   }
 }
 
-
-
 .gridDisplay,
 .gridDisplay .grid,
 .gridDisplay .grid svg {
@@ -214,7 +211,6 @@ svg {
   order: 4;
 }
 
-
 .tileStackDisplay .tileStackDisplay-counter {
   margin: 10px;
   color: #555;
@@ -258,7 +254,6 @@ svg {
   transition: transform 200ms;
 }
 
-
 .colorStackDisplay {
   background: #bbb;
   text-align: center;
@@ -272,12 +267,13 @@ svg {
   height: 45px;
   padding: 5px;
 }
-.colorStackDisplay .colorSwatch.active .svg-colorSwatch circle.svg-colorSwatch-outer {
+.colorStackDisplay
+  .colorSwatch.active
+  .svg-colorSwatch
+  circle.svg-colorSwatch-outer {
   stroke-width: 4px;
   stroke: #666;
 }
-
-
 
 .scoreDisplay {
   margin: 15px 15px;
@@ -304,11 +300,19 @@ svg {
   padding: 0;
 }
 @keyframes scoreDisplay-opacity-anim {
-  0% { opacity: 0.5; transform: scale(1.0); }
-  50% { opacity: 1.0; transform: scale(1.1); }
-  100% { opacity: 0.5; transform: scale(1.0); }
+  0% {
+    opacity: 0.5;
+    transform: scale(1);
+  }
+  50% {
+    opacity: 1;
+    transform: scale(1.1);
+  }
+  100% {
+    opacity: 0.5;
+    transform: scale(1);
+  }
 }
-
 
 .svg-scoreOverlay-mask.disabled {
   display: none;
@@ -459,12 +463,20 @@ svg {
   stroke-width: 10px;
 }
 @keyframes scoreOverlay-stroke-width {
-  0% { stroke-width: 1px }
-  100% { stroke-width: 10px }
+  0% {
+    stroke-width: 1px;
+  }
+  100% {
+    stroke-width: 10px;
+  }
 }
 @keyframes scoreOverlay-stroke-width-reverse {
-  0% { stroke-width: 10px }
-  100% { stroke-width: 1px }
+  0% {
+    stroke-width: 10px;
+  }
+  100% {
+    stroke-width: 1px;
+  }
 }
 
 .svg-tile {
@@ -512,7 +524,7 @@ svg {
 .gameList-exampleTile {
   position: relative;
   cursor: pointer;
-  transform: scale(1.0);
+  transform: scale(1);
   transition-property: transform;
   transition-duration: 100ms;
   aspect-ratio: 1 / 1;
@@ -539,14 +551,21 @@ svg {
 }
 
 @keyframes animate-appear {
-  0% { opacity: 0 }
-  100% { opacity: 100 }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100;
+  }
 }
 @keyframes animate-disappear {
-  0% { opacity: 100 }
-  100% { opacity: 0 }
+  0% {
+    opacity: 100;
+  }
+  100% {
+    opacity: 0;
+  }
 }
-
 
 @media screen and (orientation: landscape) and (max-height: 740px) {
   .gameDisplay {
@@ -677,7 +696,6 @@ svg {
   }
 }
 
-
 @media screen and (max-aspect-ratio: 4.5/3) {
   .mainMenuDisplay {
     justify-content: center;
@@ -703,4 +721,3 @@ svg {
     padding: 5%;
   }
 }
-
