Playground: option to hide labels.

--- a/playground/playground.css
+++ b/playground/playground.css
@@ -88,6 +88,11 @@ svg .points {
     display: none;
   }
 }
+.hide-labels {
+  svg .labels {
+    display: none;
+  }
+}
 
 .controls {
   position: fixed;
