--- a/playground/playground.css
+++ b/playground/playground.css
@@ -125,3 +125,21 @@ svg .points {
   max-width: 100px;
   box-sizing: border-box;
 }
+
+.container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  background: #ddd;
+}
+.container div {
+  width: 100%;
+  height: 100%;
+}
+.container svg {
+  width: 100%;
+  height: 100%;
+}
