--- a/style/screen-game.scss
+++ b/style/screen-game.scss
@@ -66,10 +66,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
-  border-top-right-radius: max(2.5vw, 20px);
-  border-top-left-radius: max(2.5vw, 20px);
-  border-bottom-left-radius: max(1.25vw, 10px);
-  border-bottom-right-radius: max(1.25vw, 10px);
+  border-radius: max(2.5vw, 20px);
   z-index: 10000;
 
   margin: -0.5vw;
@@ -98,7 +95,7 @@
 
   .items .game-button {
     grid-row: 1;
-    margin: 0 1vw 1.5vw 1vw;
+    margin: 0 1vw 1.3vw 1vw;
 
     transition: scale 0.1s;
 
