Update responsive scaling.

--- a/style/components.scss
+++ b/style/components.scss
@@ -49,9 +49,9 @@
 }
 
 .game-button {
-  width: max(2.5vw, 20px);
-  height: max(2.5vw, 20px);
-  padding: max(1.3vw, 10px);
+  width: colors.$button-scale;
+  height: colors.$button-scale;
+  padding: calc(0.5 * colors.$button-scale);
   cursor: pointer;
   border-radius: 100%;
 
@@ -80,8 +80,8 @@
 
   .icon {
     margin-left: 0.7vw;
-    width: max(2.5vw, 20px);
-    height: max(2.5vw, 20px);
+    width: colors.$button-scale;
+    height: colors.$button-scale;
     fill: rgba(0, 0, 0, 35%);
 
     svg {
@@ -92,7 +92,7 @@
 
   .toggle-box {
     flex-grow: 1;
-    border-radius: max(25vw, 20px);
+    border-radius: colors.$button-scale;
     padding: max(0.3vw, 4px);
     background: #eee;
     display: flex;
@@ -101,8 +101,8 @@
 
   .toggle-ball {
     border-radius: 100%;
-    width: max(2.5vw, 20px);
-    height: max(2.5vw, 20px);
+    width: colors.$button-scale;
+    height: colors.$button-scale;
     background: rgba(0, 0, 0, 25%);
   }
 
