--- a/style/screen-setup.scss
+++ b/style/screen-setup.scss
@@ -162,4 +162,7 @@
   .screen.game-setup .button-row {
     align-items: center;
   }
+  .screen.game-setup .button-row .game-button {
+    margin-right: 5vw;
+  }
 }
