Draw SVG coordinates at scale 100.

--- a/style/score-overlay.scss
+++ b/style/score-overlay.scss
@@ -1,3 +1,5 @@
+@use "./colors.scss";
+
 .svg-score-overlay-mask {
   &.disabled {
     display: none;
@@ -30,7 +32,7 @@
   opacity: 0;
 
   circle.points {
-    stroke-dasharray: 6 6;
+    stroke-dasharray: calc(6 * colors.$svg-scale) calc(6 * colors.$svg-scale);
   }
 
   &.disabled {
@@ -47,8 +49,9 @@
 
   &.enabled {
     .outline-fg g {
-      stroke-dasharray: 60 60;
-      stroke-dashoffset: -60;
+      stroke-dasharray: calc(60 * colors.$svg-scale)
+        calc(60 * colors.$svg-scale);
+      stroke-dashoffset: calc(-60 * colors.$svg-scale);
 
       animation-name: score-overlay-outline-fg-anim;
       animation-duration: 2s;
@@ -59,8 +62,9 @@
   }
   &.hiding {
     .outline-fg g {
-      stroke-dasharray: 60 60;
-      stroke-dasharray: -120;
+      stroke-dasharray: calc(60 * colors.$svg-scale)
+        calc(60 * colors.$svg-scale);
+      stroke-dashoffset: calc(-120 * colors.$svg-scale);
 
       animation-name: score-overlay-outline-fg-anim-reverse;
       animation-duration: 1s;
@@ -112,72 +116,72 @@
       animation-duration: 300ms;
       animation-delay: 500ms;
       animation-fill-mode: forwards;
-      stroke-width: 0.1px;
+      stroke-width: calc(0.1px * colors.$svg-scale);
     }
   }
 }
 
 @keyframes score-overlay-outline-fg-anim {
   0% {
-    stroke-dashoffset: -60;
+    stroke-dashoffset: calc(-60 * colors.$svg-scale);
   }
   100% {
-    stroke-dashoffset: -120;
+    stroke-dashoffset: calc(-120 * colors.$svg-scale);
   }
 }
 @keyframes score-overlay-outline-fg-anim-reverse {
   0% {
-    stroke-dashoffset: -120;
+    stroke-dashoffset: calc(-120 * colors.$svg-scale);
   }
   100% {
-    stroke-dashoffset: -180;
+    stroke-dashoffset: calc(-60 * colors.$svg-scale);
   }
 }
 @keyframes score-overlay-points-opacity-anim {
   0% {
     opacity: 0;
-    stroke-dashoffset: -6;
+    stroke-dashoffset: calc(-6 * colors.$svg-scale);
   }
   25% {
-    stroke-dashoffset: -6;
+    stroke-dashoffset: calc(-6 * colors.$svg-scale);
   }
   75% {
     opacity: 100;
   }
   100% {
     opacity: 100;
-    stroke-dashoffset: -12;
+    stroke-dashoffset: calc(-12 * colors.$svg-scale);
   }
 }
 @keyframes score-overlay-points-opacity-anim-reverse {
   0% {
     opacity: 100;
-    stroke-dashoffset: -4;
+    stroke-dashoffset: calc(-4 * colors.$svg-scale);
   }
   25% {
     opacity: 100;
   }
   75% {
-    stroke-dashoffset: -6;
+    stroke-dashoffset: calc(-6 * colors.$svg-scale);
   }
   100% {
     opacity: 0;
-    stroke-dashoffset: -6;
+    stroke-dashoffset: calc(-6 * colors.$svg-scale);
   }
 }
 @keyframes score-overlay-stroke-width {
   0% {
-    stroke-width: 0.01px;
+    stroke-width: calc(0.01px * colors.$svg-scale);
   }
   100% {
-    stroke-width: 0.1px;
+    stroke-width: calc(0.1px * colors.$svg-scale);
   }
 }
 @keyframes score-overlay-stroke-width-reverse {
   0% {
-    stroke-width: 0.1px;
+    stroke-width: calc(0.1px * colors.$svg-scale);
   }
   100% {
-    stroke-width: 0.01px;
+    stroke-width: calc(0.01px * colors.$svg-scale);
   }
 }
