--- a/style/screen-game.scss
+++ b/style/screen-game.scss
@@ -106,7 +106,7 @@
     }
   }
   .items .game-button + .game-button {
-    margin-left: 0;
+    margin-left: 0.5vw;
   }
 
   .items .game-toggle {
